--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>etch-a-sketch</title>
     <link rel="stylesheet" href="styles.css">
-    <script href="sketch.js" defer></script>
+    <script src="sketch.js" defer></script>
 </head>
 <body>
     <h1 id="header-title">Etch-a-Sketch</h1>
+
+
+    <div id="container">
+    </div>
+
+
 </body>
 </html>
