Refine grid creation

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <h1 id="header-title">Etch-a-Sketch</h1>
 
-
-    <div id="container">
+    <div id="input-field">
+        <p>Select grid number</p>
     </div>
+
+    <div id="container"></div>
 
 
 </body>
