Fix submit button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1 id="header-title">Etch-a-Sketch</h1>
 
     <div id="input-field">
-        <p>Select grid number</p>
+        <p id="input-text">Select grid size:</p>
+        <input id="input" placeholder="Max: 100"></input>
+        <button id="input-button" onclick="eventHandler('submit')">Enter</button>
     </div>
 
     <div id="container"></div>
