Fix destroy grid works

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p id="input-text">Select grid size:</p>
         <input id="input" placeholder="Max: 100"></input>
         <button id="input-button" onclick="eventHandler('submit')">Enter</button>
+        <button id="input-button" onclick="destroyGrid()">Delete</button>
     </div>
 
     <div id="container"></div>
