--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 </head>
 <body>
     <h1 id="header-title">Etch-a-Sketch</h1>
+    <p class="input-text" id="input-text">Select grid size width and height</p>
 
     <div id="input-field">
-        <p id="input-text">Select grid size:</p>
-        <input id="input" placeholder="Max: 100"></input>
-        <button id="input-button" onclick="eventHandler('submit')">Enter</button>
-        <button id="input-button" onclick="destroyGrid()">Delete</button>
+        
+        <div id="input-text-container">
+            <p class="input-text">Minimum : 2</p>
+            <p class="input-text">Maximum : 144</p>
+        </div>
+        <div id="input-entry-field">
+            <input id="input" placeholder="Max: 144"></input>
+            <button id="input-button" onclick="eventHandler('submit')">Enter</button>
+            <button id="input-button" onclick="destroyGrid()">Delete</button>
+        </div>
     </div>
 
     <div id="container"></div>
