Add drawing functionality and edit page text

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <h1 id="header-title">Etch-a-Sketch</h1>
-    <p class="input-text" id="input-text">Select grid size width and height</p>
+    <p class="input-text" id="input-text">Select grid size width and height below</p>
 
     <div id="input-field">
         
         <div id="input-text-container">
-            <p class="input-text">Minimum : 2</p>
-            <p class="input-text">Maximum : 144</p>
+            <!--- <p class="input-text">Minimum : 2</p> 
+            <p class="input-text">Maximum : 100</p> -->
         </div>
         <div id="input-entry-field">
-            <input id="input" placeholder="Max: 144"></input>
+            <input id="input" placeholder="Max: 100"></input>
             <button id="input-button" onclick="eventHandler('submit')">Enter</button>
             <button id="input-button" onclick="destroyGrid()">Delete</button>
         </div>
